--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,7 @@ body {
 header {
   padding: 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -33,7 +34,6 @@ h1 {
 a {
   color: white;
   text-decoration: none;
-  padding-left: 50px;
 }
 
 li {
@@ -41,9 +41,29 @@ li {
   margin-bottom: 15px;
 }
 
+.update-delete {
+  width: 30%;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.update-delete h3 {
+  font-size: 28px;
+}
+
+.update-delete h3.update a {
+  color: grey;
+}
+
+.update-delete h3.delete a {
+  color: red;
+}
+
 footer {
   padding: 30px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
