--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,50 +1,73 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+  background-color: #1E2D3B;
+  color: white;
+}
+
+header {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  padding: 30px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  font-size: 38px;
+  margin-bottom: 20px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+li {
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.update-delete {
+  width: 30%;
+  padding: 50px;
+  display: flex;
+  justify-content: space-between;
+
+  h3 {
+    font-size: 28px;
   }
 
-  body {
-    background-color: #1E2D3B;
-    color: white;
+  h3.update {
+    a {
+      color: grey;
+    }
   }
 
-  header {
-    padding: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  h3.delete {
+    a {
+      color: red;
+    }
   }
+}
 
-  .container {
-    width: 100%;
-    height: 100%;
-    padding: 30px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  h1 {
-    font-size: 38px;
-    margin-bottom: 20px;
-  }
-
-  a {
-    color: white;
-    text-decoration: none;
-    padding-left: 50px;
-  }
-
-  li {
-    font-size: 20px;
-    margin-bottom: 15px;
-  }
-
-  footer {
-    padding: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+footer {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
